[fix] overlaping-responsive

--- a/src/app/public/home/home.component.scss
+++ b/src/app/public/home/home.component.scss
@@ -109,25 +109,6 @@ left: 400px;
     display: block !important;
 }
 
-@media screen and (max-width: 768px) {
-    .search-movil {
-        display: flex !important;
-    }
-
-    .navbar {
-        padding-top: 0.5rem !important;
-    }
-
-    .search-desk {
-        display: none !important;
-    }
-
-    .action-desk {
-        display: none !important;
-    }
-}
-
-
 :host ::ng-deep {
     .p-dropdown:hover {
         box-shadow: none !important;
@@ -301,28 +282,22 @@ margin-top: 200px;
 }
 .ver{
     border-radius: 50%;
-
 }
-.imagenban{
-    position: relative;
-    margin-top: -370px;
-    margin-left: 600px;
+.botonbaner{
+    margin-top: 20px;
 }
 
-.banerizq h1{
+.tittleBanner{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.tittleBanner h1{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-size: 70px;
 }
-.frase{
-    margin-top: 180px;
-    margin-left: 200px;
-}
-.botonbaner{
-    margin-top: 20px;
-    margin-left: 350px;
-}
-
 
 .pag-banner {
     width: 0.8rem;
@@ -444,5 +419,85 @@ padding:1em 1.5em;
         // margin: 2rem 0;
         display: block;
         margin: auto;
+    }
+}
+
+.b-w-80{
+    width: 80%;
+}
+
+:host ::ng-deep .b-w-80 .p-button{
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 0;
+    background: #f6f6f6;
+    color: #000
+} 
+
+.carousel-item{
+    display: none;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    padding: 0 6rem;
+}
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item-start {
+    display: flex;
+}
+
+.imagenban{
+    width: 40%;
+    max-height: 80%;
+    height: 100%;
+}
+
+.imagenban img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .search-movil {
+        display: flex !important;
+    }
+
+    .navbar {
+        padding-top: 0.5rem !important;
+    }
+
+    .search-desk {
+        display: none !important;
+    }
+
+    .action-desk {
+        display: none !important;
+    }
+
+    .carousel-item{
+        flex-direction: column;
+    }
+
+    .tittleBanner{
+        margin-top: 0;
+        margin-bottom: 4rem;
+    }
+
+    .tittleBanner h1{
+        font-size: 40px
+    }
+
+    .imagenban{
+        height: 40%;
+    }
+
+    .carousel-inner{
+        height: 65vh;
     }
 }
